# orderinvoice

./: .env.example  Dockerfile  README.md  install.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yaml
api/: data.json  main.py  settings.py
api/config/: firebase.py
api/database/: config.py  database.db  schema.sql  seed.py
api/utils/: invoice.py  secure.py
gui/: __main__.py
static/: invoice.css
templates/: index.html
tests/: conftest.py  test_invoice.py  test_secure.py
