[tool.poetry]
name = "invoice"
version = "0.1.0"
description = ""
authors = ["Carlos Mateus <carlosmatateumateus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
httpx = "^0.27.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.2.0"
jinja2 = "^3.1.3"
pdfkit = "^1.0.0"
weasyprint = "^61.2"
isort = "^5.13.2"
taskipy = "^1.14.1"
requests = "^2.32.3"
pyqt5 = "^5.15.11"

[tool.taskipy.tasks]
lint = "black api/ gui/ tests/ && isort api/ gui/ tests/"
run = "uvicorn api.main:app --reload"
gui = "python gui/"
seed = "python api/database/seed.py"

[tool.pytest.ini_options]
log_level = "ERROR"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
